# python-library

./: .gitignore  .readthedocs.yml  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run_container.sh  setup.py  test_astromer.py
ASTROMER/: __init__.py  models.py  preprocessing.py  utils.py
ASTROMER/core/: astromer.py  attention.py  classifier.py  data.py  masking.py  plots.py  utils.py
ASTROMER/core/training/: callbacks.py
deepweights/: __init__.py
deepweights/core/: astromer.py
deepweights/core/components/: decoder.py  encoder.py
docs/: ASTROMER.core.rst  ASTROMER.rst  conf.py  index.rst  modules.rst  requirements.txt  src.rst
docs/_build/doctrees/: ASTROMER.core.doctree  ASTROMER.doctree  environment.pickle  index.doctree  modules.doctree  src.core.doctree  src.doctree
docs/_build/html/: .buildinfo  ASTROMER.core.html  ASTROMER.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  src.core.html  src.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/ASTROMER/: models.html  preprocessing.html  utils.html
docs/_build/html/_modules/ASTROMER/core/: astromer.html  attention.html  classifier.html  data.html  encoder.html  losses.html  masking.html  metrics.html  output.html  plots.html  positional.html  scheduler.html  tboard.html  utils.html
docs/_build/html/_modules/src/: models.html  utils.html
docs/_build/html/_modules/src/core/: astromer.html  attention.html  data.html  encoder.html  losses.html  masking.html  metrics.html  output.html  plots.html  positional.html  scheduler.html  tboard.html  utils.html
docs/_build/html/_sources/: ASTROMER.core.rst.txt  ASTROMER.rst.txt  index.md.txt  index.rst.txt  modules.rst.txt  src.core.rst.txt
src/: __init__.py  astromer.py
src/ASTROMER/: __init__.py  __main__.py  models.py  preprocessing.py  utils.py
src/ASTROMER/core/: data.py  encoder.py
src/astromer/: data.py  model.py  utils.py
src/astromer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/astromer/components/: encoder.py
src/astromer/preprocess/: masking.py  records.py  tools.py
src/astromer/training/: losses.py
src/astromer/weights/macho/: conf.json  weights.h5
src/astromer/weights/macho/logs/train/: events.out.tfevents.1647613027.pececillo.3174737.0.v2  events.out.tfevents.1647613033.pececillo.profile-empty
src/astromer/weights/macho/logs/train/plugins/profile/2022_03_18_11_17_13/: pececillo.input_pipeline.pb  pececillo.overview_page.pb  pececillo.tensorflow_stats.pb
src/astromer/weights/macho/logs/validation/: events.out.tfevents.1647615062.pececillo.3174737.1.v2
src/astromer_test/: __init__.py
src/astromer_test/core/: astromer.py  data.py  scheduler.py
src/core/: astromer.py  data.py  utils.py
src/core/components/: encoder.py
src/core/preprocess/: masking.py
src/core/training/: metrics.py
src/tests/: test_library.py
src/weights/macho/: conf.json  weights.data-00000-of-00001  weights.index
src/weights/macho/logs/train/: events.out.tfevents.1632882883.nodeGPU01.1696905.2475.v2
src/weights/macho/logs/valid/: events.out.tfevents.1632882883.nodeGPU01.1696905.2483.v2
